# LR-AutoTagger

./: .env.example  .gitignore  CLAUDE.md  LRAutoTagArchitektur.md  Makefile  README.md  TEST_SPEC.md  __CLAUDE.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py  monitoring.py
backend/app/api/: auth.py  routes.py
backend/app/db/: repository.py
backend/app/pipeline/: exif_classifier.py  exif_extractor.py  focal_length_classifier.py  geocoder.py  image_processor.py  keyword_normalizer.py  keyword_pipeline.py  ollama_client.py  pixel_analyzer.py  prompt_builder.py  sun_calculator.py
backend/app/services/: job_manager.py
backend/migrations/: 001_initial.sql
backend/scripts/benchmark/: _common.py  fetch_wikimedia.py  oracle_gpt.py  prepare_oracle_batch.py  run_extended.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_batch_flow.py  test_edge_cases.py  test_pipeline_integration.py  test_repository_integration.py
backend/tests/nfa/: conftest.py  test_performance.py  test_security.py  test_vision_benchmark.py
backend/tests/nfa/fixtures/benchmark_images/: SOURCES.md
backend/tests/system/: conftest.py  test_api_analyze.py  test_api_batch.py  test_api_health.py  test_api_results.py  test_metrics.py
backend/tests/unit/: conftest.py
backend/tests/unit/api/: test_auth.py
backend/tests/unit/pipeline/: test_exif_classifier.py  test_exif_extractor.py  test_focal_length_classifier.py  test_geocoder.py  test_image_processor.py  test_keyword_normalizer.py  test_keyword_pipeline.py  test_ollama_client.py  test_pixel_analyzer.py  test_prompt_builder.py  test_sun_calculator.py
backend/tests/unit/services/: test_job_manager.py
docs/: admin.md  backlog.md  installation.md  tech.md  user-guide.md
docs/benchmark/: article.md  article_linkedin.md  report.md  run_benchmark.py
docs/benchmark/ground_truth/: SOURCES.md  manifest.jsonl
docs/benchmark/results/: bakllava.json  gemma3_27b.json  gemma3_4b.json  gemma4_26b.json  gemma4_31b-it-q4_K_M.json  llava-llama3.json  (+4 more)
monitoring/loki/: rules.yml
monitoring/prometheus/: rules.yml  targets.yml
plugin/LR-AutoTag.lrplugin/: AutoTagApiClient.lua  AutoTagBatch.lua  AutoTagInteractive.lua  AutoTagMultipart.lua  AutoTagPluginInfoProvider.lua  Info.lua
scripts/: build-backend.sh  build-plugin.sh  install-backend.sh  lr-autotag.service
(+10 files in other folders)
